# Skynet-ai_Beta2

./: LICENSE  README.md
skynet_ai/: README.md  env.sample  pyproject.toml
src/skynet_ai/: crew.py  main.py
