[project]
name = "skynet_ai"
version = "0.1.0"
description = "skynet-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
skynet_ai = "skynet_ai.main:run"
run_crew = "skynet_ai.main:run"
train = "skynet_ai.main:train"
replay = "skynet_ai.main:replay"
test = "skynet_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
